# Object-Oriented_Programming_laboratory_work_4

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: example_1.py  individual_2.py  task_1.py  task_2.py
tests/: test_individual_2.py  test_task_1.py  test_task_2.py
