[project]
name = "lab-oop-4"
version = "0.1.0"
description = "Лабораторная работа 4"
authors = [
    {name = "Andrey",email = "pustakovandrej@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
isort = "^5.13.2"
black = "^24.10.0"
pre-commit = "^4.0.1"

